<?xml version="1.0" encoding="utf-8"?>
<!--
    SnapApp started with NavDrawer sample
  -->
<resources>
    <string-array name="menu_list">
        <item>Set Card Data</item>
        <item>Check ID</item>
        <item>Shopping</item>
        <item>Balances</item>
        <item>Market Map</item>
    </string-array>
    <string name="app_name">SnapApp</string>
    <string name="confirm_key">ec0c1d6e-c343-48bf-8564-b8bb35eb5600</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>

    <string name="intro_message">Scan your Card</string>
    <string name="intro2_message">Enter your Card Information</string>
    <string name="number_label">EBT Card Number</string>
    <string name="number_hint">numbers only, no spaces</string>
    <string name="name_label">Card Owner</string>
    <string name="name_hint">name on the card</string>
    <string name="date_label">Birthdate</string>
    <string name="date_hint">dd/mm/yyyy</string>
    <string name="pin_label">Card Password</string>
    <string name="pin_hint">Secret Pin</string>
    <string name="scan">Scan</string>
    <string name="save">Save</string>
    <string name="cancel_scan">Cancel Scan</string>
    <string name="confirm">Confirm EBT Card Ownership\nCheck ID\n(Confirm.IO)</string>

    <string name="acct_title">Account Details</string>
    <string name="acct_state_label">State issuing card:</string>
    <string name="acct_user_label">User ID:</string>
    <string name="acct_pwd_label">Password:</string>

    <string name="app_not_available">Sorry, there\'s no web browser available</string>

    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Ocr Detector Sample</string>
    <string name="ocr_header">Click &quot;Detect Text&quot; to detect text</string>
    <string name="read_text">Detect Text</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="ocr_success">Text read successfully</string>
    <string name="ocr_failure">No text captured</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>

    <string-array name="states">
        <item>Alabama</item>
        <item>Alaska</item>
        <item>Arizona</item>
        <item>Arkansas</item>
        <item>California</item>
        <item>Colorado</item>
        <item>Connecticut</item>
        <item>Delaware</item>
        <item>Florida</item>
        <item>Georgia</item>
        <item>Hawaii</item>
        <item>Idaho</item>
        <item>Illinois</item>
        <item>Indiana</item>
        <item>Iowa</item>
        <item>Kansas</item>
        <item>Kentucky</item>
        <item>Louisiana</item>
        <item>Maine</item>
        <item>Maryland</item>
        <item>Massachusetts</item>
        <item>Michigan</item>
        <item>Minnesota</item>
        <item>Mississippi</item>
        <item>Missouri</item>
        <item>Montana</item>
        <item>Nebraska</item>
        <item>Nevada</item>
        <item>New Hampshire</item>
        <item>New Jersey</item>
        <item>New Mexico</item>
        <item>New York</item>
        <item>North Carolina</item>
        <item>North Dakota</item>
        <item>Ohio</item>
        <item>Oklahoma</item>
        <item>Oregon</item>
        <item>Pennsylvania</item>
        <item>Rhode Island</item>
        <item>South Carolina</item>
        <item>South Dakota</item>
        <item>Tennessee</item>
        <item>Texas</item>
        <item>Utah</item>
        <item>Vermont</item>
        <item>Virginia</item>
        <item>Washington</item>
        <item>West Virginia</item>
        <item>Wisconsin</item>
        <item>Wyoming</item>
    </string-array>
</resources>
