<?xml version="1.0" encoding="utf-8"?>
<!--
  Onboard activity, first screen to show after install
  Includes Appbar and nav drawer navigation
  -->
<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:openDrawer="start" >

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout android:id="@+id/content_frame"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView android:id="@+id/status"
                style="@style/Widget.SampleMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/intro_message" />

            <android.support.v7.widget.AppCompatImageButton
                android:id="@+id/scanButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:padding="16dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_bg"
                android:src="@android:drawable/ic_menu_camera"
                android:onClick="scanCard" />

            <View android:layout_width="match_parent"
                android:background="@color/ghost_teal"
                android:layout_height="1dp"
                android:layout_marginLeft="@dimen/horizontal_page_margin"
                android:layout_marginRight="@dimen/horizontal_page_margin"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"/>

            <TextView style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/number_label" />

            <EditText android:id="@+id/card"
                style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_marginLeft="@dimen/horizontal_page_margin"
                android:layout_marginRight="@dimen/horizontal_page_margin"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/number_hint" />

            <TextView style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/name_label" />

            <EditText android:id="@+id/name"
                style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_marginLeft="@dimen/horizontal_page_margin"
                android:layout_marginRight="@dimen/horizontal_page_margin"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/name_hint" />

            <TextView style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/date_label" />

            <EditText android:id="@+id/date"
                style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_marginLeft="@dimen/horizontal_page_margin"
                android:layout_marginRight="@dimen/horizontal_page_margin"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/date_hint" />

            <TextView style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:text="@string/pin_label" />

            <EditText android:id="@+id/pin"
                style="@style/Widget.SampleMessage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_small"
                android:layout_marginLeft="@dimen/horizontal_page_margin"
                android:layout_marginRight="@dimen/horizontal_page_margin"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginBottom="@dimen/margin_small"
                android:hint="@string/pin_hint"
                android:inputType="numberPassword" />
        </LinearLayout>
    </ScrollView>

    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/left_drawer"
        android:scrollbars="vertical"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="left|start"
        android:choiceMode="singleChoice"
        android:divider="@null"
        app:layoutManager="LinearLayoutManager"
        />
</android.support.v4.widget.DrawerLayout>
